--- a/index.html
+++ b/index.html
@@ -4,9 +4,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Instagram</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="instagram-wrapper">
+        <div class="instagram-phone">
+            <img src="img/instagram-celular.png" alt="celular_instagram">
+        </div>
+        <div class="instagam-continue">
+            <div class="group">
+                <img src="img/instagram-logo.png" alt="Logo do instagram">
+                <div class="profile-photo">
+                    <img src="./img/perfil_instagram.png" alt="Foto de Perfil">
+                </div>
+                <a href="#" class="instagram*login">Continue como Anny.Karoliny_</a>
+                <a href="#" class="instagram-logout"> Remover Conta</a>
+            </div>
+            <div class="group">
+                <p class="not-account"> Não é Anny.Karoliny_?</p>
+                <p class="not-account">
+                    <span class="link-blue"> Alternar contas</span>
+                    ou 
+                    <span class="link-blue"> Inscreva-se</span>
+                </p>
+            </div>
+            <div class="get-the-app">
+                <p class="get-app"> Baixe o aplicativo</p>
+                <div class="download">
+                    <a href="#" class="app-download"></a>
+                    <a href="#" class="app-download"></a>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
