--- a/index.html
+++ b/index.html
@@ -10,27 +10,27 @@
 <body>
     <div class="instagram-wrapper">
         <div class="instagram-phone">
-            <img src="img/instagram-celular.png" alt="celular_instagram">
+            <img src="./img/instagram-celular.png" alt="celular">
         </div>
-        <div class="instagam-continue">
+        
+        <div class="instagram-continue">
             <div class="group">
-                <img src="img/instagram-logo.png" alt="Logo do instagram">
+                <img src="./img/instagram-logo.png" class="instagram-logo" alt="instagram logo">
                 <div class="profile-photo">
-                    <img src="./img/perfil_instagram.png" alt="Foto de Perfil">
+                    <img src="./img/perfil_instagram.png" alt="imagem de perfil">
                 </div>
-                <a href="#" class="instagram*login">Continue como Anny.Karoliny_</a>
-                <a href="#" class="instagram-logout"> Remover Conta</a>
+                <a href="#" class="instagram-login"> Continuar como anny.karoliny_</a>
+                <a href="#" class="instagram-logout"> Remover conta</a>
             </div>
             <div class="group">
-                <p class="not-account"> Não é Anny.Karoliny_?</p>
-                <p class="not-account">
-                    <span class="link-blue"> Alternar contas</span>
+                <p class="not-account">Não é anny.karoliny_?</p>
+                <p class="not-account"> 
+                    <span class="link-blue">Trocar de conta</span>
                     ou 
-                    <span class="link-blue"> Inscreva-se</span>
-                </p>
+                    <span class="link-blue">Cadastre-se</span></p>
             </div>
             <div class="get-the-app">
-                <p class="get-app"> Baixe o aplicativo</p>
+                <p class="get-app">Obtenha o aplicativo</p>
                 <div class="download">
                     <a href="#" class="app-download"></a>
                     <a href="#" class="app-download"></a>
